[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.25.0"
nalgebra = "0.32.4"
num_cpus = "1.16.0"
rayon = "1.8.1"
rand = "0.8.5"
once_cell = "1.19.0"
lazy_static = "1.4.0"
image = "0.24.9"
